--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1,3 +1,6 @@
+/* ====================== */
+/* Fonts */
+/* ====================== */
 @import url('https://fonts.googleapis.com/css2?family=Special+Elite&display=swap');
 @font-face {
   font-family: 'Blood Crow';
@@ -11,6 +14,9 @@
   font-family: 'Old Cupboard';
   src: url("../fonts/OldCupboard.otf") format("opentype");
 }
+/* ====================== */
+/* Flex */
+/* ====================== */
 .flexrow {
   display: flex;
   flex-direction: row;
@@ -52,6 +58,9 @@
 .flexcol .flex4 {
   flex: 4;
 }
+/* ====================== */
+/* MorkBorg globals
+/* ====================== */
 .morkborg {
 }
 .morkborg .window-content {
@@ -61,6 +70,9 @@
 .morkborg form {
   height: 100%;
 }
+/* ====================== */
+/* Sheet globals */
+/* ====================== */
 .morkborg.sheet .window-content {
   overflow-y: hidden;
   padding: 5px;
@@ -109,29 +121,85 @@
 .morkborg.sheet button:focus {
   box-shadow: 0 0 5px #ffe500;
 }
+/* ====================== */
+/* TinyMCE editor */
+/* ====================== */
+.morkborg.sheet a:hover {
+  text-shadow: 0 0 8px #ffe500;
+}
+.morkborg.sheet .editor {
+  color: white;
+  border: 1px solid #7a7971;
+}
+/*.morkborg.sheet .editor-content {
+  color: white;
+}
+*//* TODO: see if there's a better way for us to style TinyMCE */
 /* 
 Anchor hover affects font awesome icons, like the on-hover TinyMCE edit icon:;
   <a class="editor-edit"><i class="fas fa-edit"></i></a>
 alternately we could select as
 .morkborg.sheet .editor:hover .editor-edit:hover .fa-edit {}        
  */
-.morkborg.sheet.actor a:hover {
-  text-shadow: 0 0 8px #ffe500;
-}
-.morkborg.sheet.actor .editor {
-  color: white;
-  border: 1px solid #7a7971;
-}
-/*.morkborg.sheet.actor .editor-content {
-  color: white;
-}
-*//* TODO: see if there's a better way for us to style TinyMCE */
-.morkborg.sheet.actor .tox.tox-tinymce .tox-edit-area__iframe {
+.morkborg.sheet .tox.tox-tinymce .tox-edit-area__iframe {
   /* TODO: how do we style font color in tinymce? 
   color: white;
   */
   background: lightgray;
 }
+.morkborg .editor,
+.morkborg .editor-content {
+  height: 100%;
+/*  font-family: 'Special Elite', cursive;
+  font-size: 12px;
+*/}
+.morkborg.sheet .editor {
+  padding: 0 8px;
+}
+/* ====================== */
+/* Sheet Tabs */
+/* ====================== */
+.morkborg.sheet .sheet-tabs {
+  flex: 0 0 30px;
+  margin-bottom: 5px;
+  font-family: "Modesto Condensed", "Palatino Linotype", serif;
+  font-size: 20px;
+  font-weight: 700;
+  /* TODO: track down the border-top and border-bottom getting inherited on these */
+  border-top: none;
+  border-bottom: none;
+}
+.morkborg.sheet .sheet-tabs .item {
+  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-size: 22px;
+  height: 30px;
+  line-height: 32px;
+  margin: 0 5px;
+  width: 120px;
+}
+.morkborg.sheet .sheet-tabs .item:hover {
+  color: black;
+  text-shadow: 0 0 10px #ffe500;
+}
+.morkborg.sheet .sheet-tabs .item.active {
+    text-shadow: none;
+    background-color: #ffe500;
+    color: black;
+}
+/* ====================== */
+/* Sheet Body */
+/* ====================== */
+.morkborg .sheet-body {
+  /*flex: 1;*/
+  overflow: hidden;
+}
+.morkborg .sheet-body .tab {
+  height: 100%;
+  overflow-y: auto;
+}
+/* ====================== */
+/* Actor header */
+/* ====================== */
 .morkborg.sheet.actor .sheet-header {
   margin-top: 0;
   flex: 0 0 200px;
@@ -296,57 +364,4 @@ alternately we could select as
   float: left;
   border-radius: 0;  
   color: white;
-}
-.morkborg.sheet .sheet-tabs {
-  flex: 0 0 30px;
-  margin-bottom: 5px;
-  font-family: "Modesto Condensed", "Palatino Linotype", serif;
-  font-size: 20px;
-  font-weight: 700;
-  /* TODO: track down the border-top and border-bottom getting inherited on these */
-  border-top: none;
-  border-bottom: none;
-}
-.morkborg.sheet .sheet-tabs .item {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
-  font-size: 22px;
-  height: 30px;
-  line-height: 32px;
-  margin: 0 5px;
-  width: 120px;
-}
-.morkborg.sheet .sheet-tabs .item:hover {
-  color: black;
-  text-shadow: 0 0 10px #ffe500;
-}
-.morkborg.sheet .sheet-tabs .item.active {
-/*  text-shadow:
-    -2px -2px 0 #ffe500,
-     0   -2px 0 #ffe500,
-     2px -2px 0 #ffe500,
-     2px  0   0 #ffe500,
-     2px  2px 0 #ffe500,
-     0    2px 0 #ffe500,
-    -2px  2px 0 #ffe500,
-    -2px  0   0 #ffe500;  */
-    text-shadow: none;
-    background-color: #ffe500;
-    color: black;
-}
-.morkborg .sheet-body {
-  /*flex: 1;*/
-  overflow: hidden;
-}
-.morkborg .sheet-body .tab {
-  height: 100%;
-  overflow-y: auto;
-}
-.morkborg .editor,
-.morkborg .editor-content {
-  height: 100%;
-/*  font-family: 'Special Elite', cursive;
-  font-size: 12px;
-*/}
-.morkborg.sheet.actor .editor {
-  padding: 0 8px;
 }
