Calculate carrying capacity from items.

--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -27,7 +27,7 @@
             <div class="miseries-row">
                 <span class="stat-label miseries-label">{{ localize "MB.Miseries" }}:</span>
                 <ul class="miseries">
-                    <li><label><input type="radio" name="data.miseries" value="0" data-dtype="Number" {{#eq data.miseries 0}}checked{{/eq}}/><span>0</span></label></li>                  
+                    <li><label><input type="radio" name="data.miseries" value="0" data-dtype="Number" {{#ifEquals data.miseries 0}}checked{{/ifEquals}}/><span>0</span></label></li>                  
                     <li><label><input type="radio" name="data.miseries" value="1" data-dtype="Number" {{#ifEquals data.miseries 1}}checked{{/ifEquals}}/><span>1</span></label></li>                  
                     <li><label><input type="radio" name="data.miseries" value="2" data-dtype="Number" {{#ifEquals data.miseries 2}}checked{{/ifEquals}}/><span>2</span></label></li>                  
                     <li><label><input type="radio" name="data.miseries" value="3" data-dtype="Number" {{#ifEquals data.miseries 3}}checked{{/ifEquals}}/><span>3</span></label></li>                  
@@ -111,7 +111,7 @@
                         </div>
                     </li>            
                     <ol class="item-list">
-                        {{#each actor.weapons as |item id|}}
+                        {{#each data.weapons as |item id|}}
                         <li class="item flexrow" data-item-id="{{item._id}}">
                             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                             <h4 class="item-name">{{item.name}}</h4>
@@ -139,7 +139,7 @@
                         </div>
                     </li>   
                     <ol class="item-list">
-                        {{#each actor.armor as |item id|}}
+                        {{#each data.armor as |item id|}}
                         <li class="item flexrow" data-item-id="{{item._id}}">
                             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                             <h4 class="item-name">{{item.name}}</h4>
@@ -174,7 +174,7 @@
                     </div>
                 </li>  
                 <ol class="item-list">
-                    {{#each actor.scrolls as |item id|}}
+                    {{#each data.scrolls as |item id|}}
                     <li class="item flexrow" data-item-id="{{item._id}}">
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                         <h4 class="item-name">{{item.name}}</h4>
@@ -195,42 +195,41 @@
         </div>
 
         {{!-- Equipment Tab --}}
-        <div class="tab items" data-group="primary" data-tab="equipment">
-
-            <div class="form-group">
-                <label>{{ localize "MB.Silver" }}</label>
-                <input type="text" name="silver" value="{{data.silver}}" placeholder="0" data-dtype="Number" />
+        <div class="tab" data-group="primary" data-tab="equipment">
+            <div class="equipment-top-row">
+                <span class="stat-label">{{ localize "MB.Silver" }}:</span>
+                <input class="stat-input" name="data.silver" type="number" value="{{data.silver}}" data-dtype="Number" />
+            </div>
+            <div>
+                <span class="stat-label">{{ localize "MB.CarryingCapacity" }}:</span>
+                <input class="stat-input" name="data.carryingCapacity" type="number" value="{{data.carryingCapacity}}" data-dtype="Number" />
             </div> 
-
-            <div class="form-group">
-                <label>{{ localize "MB.CarryingCapacity" }}</label>
-                <input type="text" name="carryingcapacity" value="{{data.carryingcapacity}}" placeholder="0" data-dtype="Number" />
-            </div> 
-
-            <ol class="items-list inventory-list">
-                <li class="items-header flexrow">
-                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeMiscPlural"}}</h3>
-                    <div class="item-controls flexrow">
-                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                        </a>
-                    </div>
-                </li>
-                <ol class="item-list">
-                    {{#each actor.misc as |item id|}}
-                    <li class="item flexrow" data-item-id="{{item._id}}">
-                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                        <h4 class="item-name">{{item.name}}</h4>
-                        <div class="item-buttons">
-                        </div>
-                        <div class="item-controls">
-                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+            <div>
+                <ol class="items-list inventory-list">
+                    <li class="items-header flexrow">
+                        <h3 class="item-name flexrow">{{localize "MB.ItemTypeMiscPlural"}}</h3>
+                        <div class="item-controls flexrow">
+                            <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+                                <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+                            </a>
                         </div>
                     </li>
-                    {{/each}}
+                    <ol class="item-list">
+                        {{#each data.misc as |item id|}}
+                        <li class="item flexrow" data-item-id="{{item._id}}">
+                            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                            <h4 class="item-name">{{item.name}}</h4>
+                            <div class="item-buttons">
+                            </div>
+                            <div class="item-controls">
+                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                            </div>
+                        </li>
+                        {{/each}}
+                    </ol>
                 </ol>
-            </ol>    
+            </div>  
         </div>
 
         {{!-- Notes Tab --}}
