--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -62,12 +62,12 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="bio">{{ localize 'MB.Bio' }}</a>
+        <a class="item" data-tab="bio">{{ localize 'MB.Obituary' }}</a>
         <a class="item" data-tab="class">{{ localize 'MB.Class' }}</a>
         <a class="item" data-tab="violence">{{ localize 'MB.Violence' }}</a>
         <a class="item" data-tab="powers">{{ localize 'MB.Powers' }}</a>
-        <a class="item" data-tab="equipment">{{ localize 'MB.Equipment' }}</a>
-        <a class="item" data-tab="notes">{{ localize 'MB.Notes' }}</a>
+        <a class="item" data-tab="equipment">{{ localize 'MB.Burdens' }}</a>
+        <a class="item" data-tab="notes">{{ localize 'MB.Scrawls' }}</a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -96,70 +96,64 @@
 
         {{!-- Violence Tab --}}
         <div class="tab violence" data-group="primary" data-tab="violence">
-            <div class="violence-block">
-                <div class="initiative">
-                    <button class="rollable" data-roll="d6" data-label="{{localize 'MB.PartyInitiative'}} (1-3 {{localize 'MB.EnemiesBegin'}}, 4-6 {{localize 'MB.PlayerCharactersBegin'}})" title="{{localize 'MB.PartyInitiative'}}">{{localize "MB.PartyInitiative"}}</button>
-                    <button class="rollable" data-roll="d6+@abilities.agility.score" data-label="{{localize 'MB.PlayerInitiative'}}" title="{{localize 'MB.PlayerInitiative'}}">{{localize "MB.PlayerInitiative"}}</button>
-                </div>                
-                <ol class="items-list inventory-list">
-                    <li class="items-header flexrow">
-                        <h3 class="item-name flexrow">{{localize "MB.ItemTypeWeaponPlural"}}</h3>
-                        <div class="item-controls flexrow">
-                            <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                                <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                            </a>
-                        </div>
-                    </li>            
-                    <ol class="item-list">
-                        {{#each data.weapons as |item id|}}
-                        <li class="item flexrow" data-item-id="{{item._id}}">
-                            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                            <h4 class="item-name">{{item.name}}</h4>
-                            <div class="item-buttons">
-                                <button class="item-button rollable" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
-                                        title="{{item.data.attackLabel}}">{{item.data.attackLabel}}</button>
-                                <button class="item-button rollable" data-roll="{{item.data.damageDie}}" data-label="damage_{{item._id}}"
-                                        title="{{item.data.damageLabel}}">{{item.data.damageLabel}}</button>
-                            </div>
-                            <div class="item-group">                          
-                            </div>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                        {{/each}}
-                    </ol> 
-                    <li class="items-header flexrow">
-                        <h3 class="item-name flexrow">{{localize "MB.ItemTypeArmorPlural"}}</h3>
-                        <div class="item-controls flexrow">
-                            <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+            <ol class="items-list inventory-list">
+                <li class="items-header flexrow">
+                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeWeaponPlural"}}</h3>
+                    <div class="item-controls flexrow">
+                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
                             <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                            </a>
+                        </a>
+                    </div>
+                </li>            
+                <ol class="item-list">
+                    {{#each actor.weapons as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}}</h4>
+                        <div class="item-buttons">
+                            <button class="item-button rollable" data-roll="d20+@abilities.strength.score" data-label="attack_{{item._id}}"
+                                    title="{{item.data.attackLabel}}">{{item.data.attackLabel}}</button>
+                            <button class="item-button rollable" data-roll="{{item.data.damageDie}}" data-label="damage_{{item._id}}"
+                                    title="{{item.data.damageLabel}}">{{item.data.damageLabel}}</button>
                         </div>
-                    </li>   
-                    <ol class="item-list">
-                        {{#each data.armor as |item id|}}
-                        <li class="item flexrow" data-item-id="{{item._id}}">
-                            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                            <h4 class="item-name">{{item.name}}</h4>
-                            <div class="item-buttons">
-                                {{#ifEquals item.type "armor"}}
-                                    <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
-                                            title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
-                                    <button class="item-button rollable" data-roll="{{item.data.damageReductionDie}}" data-label="damageReduction_{{item._id}}"
-                                            title="{{localize 'MB.DamageReduction'}}">{{item.data.damageReductionDie}} {{localize "MB.DamageReduction"}}</button>                                    
-                                {{/ifEquals}}
-                            </div>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                        {{/each}}
-                    </ol>                    
-                </ol>                        
-            </div>
+                        <div class="item-group">                          
+                        </div>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/each}}
+                </ol> 
+                <li class="items-header flexrow">
+                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeArmorPlural"}}</h3>
+                    <div class="item-controls flexrow">
+                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+                        <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+                        </a>
+                    </div>
+                </li>   
+                <ol class="item-list">
+                    {{#each actor.armor as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}}</h4>
+                        <div class="item-buttons">
+                            {{#ifEquals item.type "armor"}}
+                                <button class="item-button rollable" data-roll="d20+@abilities.agility.score" data-label="defend_{{item._id}}"
+                                        title="{{localize 'MB.Defend'}}">{{localize "MB.Defend"}}</button>
+                                <button class="item-button rollable" data-roll="{{item.data.damageReductionDie}}" data-label="damageReduction_{{item._id}}"
+                                        title="{{localize 'MB.DamageReduction'}}">{{item.data.damageReductionDie}} {{localize "MB.DamageReduction"}}</button>                                    
+                            {{/ifEquals}}
+                        </div>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+                        </div>
+                    </li>
+                    {{/each}}
+                </ol>                    
+            </ol>                        
         </div>
 
         {{!-- Powers Tab --}}
@@ -174,7 +168,7 @@
                     </div>
                 </li>  
                 <ol class="item-list">
-                    {{#each data.scrolls as |item id|}}
+                    {{#each actor.scrolls as |item id|}}
                     <li class="item flexrow" data-item-id="{{item._id}}">
                         <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
                         <h4 class="item-name">{{item.name}}</h4>
@@ -197,39 +191,35 @@
         {{!-- Equipment Tab --}}
         <div class="tab" data-group="primary" data-tab="equipment">
             <div class="equipment-top-row">
-                <span class="stat-label">{{ localize "MB.Silver" }}:</span>
-                <input class="stat-input" name="data.silver" type="number" value="{{data.silver}}" data-dtype="Number" />
-            </div>
-            <div>
-                <span class="stat-label">{{ localize "MB.CarryingCapacity" }}:</span>
+                <span class="silver-label">{{ localize "MB.Silver" }}:</span>
+                <input class="stat-input silver-input" name="data.silver" type="number" value="{{data.silver}}" data-dtype="Number" />
+                <span class="carryingcapacity-label">{{ localize "MB.CarryingCapacity" }}:</span>
                 <input class="stat-input" name="data.carryingCapacity" type="number" value="{{data.carryingCapacity}}" data-dtype="Number" />
             </div> 
-            <div>
-                <ol class="items-list inventory-list">
-                    <li class="items-header flexrow">
-                        <h3 class="item-name flexrow">{{localize "MB.ItemTypeMiscPlural"}}</h3>
-                        <div class="item-controls flexrow">
-                            <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
-                                <i class="fas fa-plus"></i> {{localize "MB.Add"}}
-                            </a>
+            <ol class="items-list inventory-list">
+                <li class="items-header flexrow">
+                    <h3 class="item-name flexrow">{{localize "MB.ItemTypeMiscPlural"}}</h3>
+                    <div class="item-controls flexrow">
+                        <a class="item-control item-create" title='{{localize "MB.ItemCreate"}}'>
+                            <i class="fas fa-plus"></i> {{localize "MB.Add"}}
+                        </a>
+                    </div>
+                </li>
+                <ol class="item-list">
+                    {{#each actor.misc as |item id|}}
+                    <li class="item flexrow" data-item-id="{{item._id}}">
+                        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+                        <h4 class="item-name">{{item.name}}</h4>
+                        <div class="item-buttons">
+                        </div>
+                        <div class="item-controls">
+                            <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+                            <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
                         </div>
                     </li>
-                    <ol class="item-list">
-                        {{#each data.misc as |item id|}}
-                        <li class="item flexrow" data-item-id="{{item._id}}">
-                            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-                            <h4 class="item-name">{{item.name}}</h4>
-                            <div class="item-buttons">
-                            </div>
-                            <div class="item-controls">
-                                <a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-                                <a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-                            </div>
-                        </li>
-                        {{/each}}
-                    </ol>
+                    {{/each}}
                 </ol>
-            </div>  
+            </ol>
         </div>
 
         {{!-- Notes Tab --}}
